# FasterTransformer

torch/: CMakeLists.txt  ft_ops.cc  test_ln.py  test_rms.py  test_silu.py
